ci(actions): update ci

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,3 +16,10 @@ jobs:
         run: |
           ls ${{ github.workspace }}
       - run: echo "🍏 This job's status is ${{ job.status }}."
+  View-my-machine:
+    runs-on: ubuntu-latest
+    steps:
+      - run: cat /etc/os-release
+      - run: nproc
+      - name: My process
+        run: echo "🖥️🖥️🖥️🖥️"
